--- a/kadai_004/index_for_student.html
+++ b/kadai_004/index_for_student.html
@@ -91,7 +91,8 @@
       <button class="btn btn-outline-secondary">ここを押す</button>
       <button class="btn btn-outline-light">ここを押す</button>
       <button class="btn btn btn-info">ここを押す</button>
-
+      <button class="btn btn btn-info btn-lg shadow">ここを押す</button>
+      <button class="btn btn-outline-danger shadow">ここを押す</button>
     </div>
     <div class="">
       <!-- <div class="row"> -->
