--- a/kadai_004/index_for_student.html
+++ b/kadai_004/index_for_student.html
@@ -81,9 +81,9 @@
       </style>
 
       <!-- buttonテスト -->
-      <button class="btn btn-primary btn-lg shadow">ここを押す</button>
+      <!-- <button class="btn btn-primary btn-lg shadow">ここを押す</button>
       <div class="button-test">ここを押す</div>
-      <a href="" class="btn btn-info btn-sm shadow">ここを押す</a>
+      <a href="" class="btn btn-info btn-sm shadow">ここを押す</a> -->
       <button class="btn btn-outline-info">ここを押す</button>
       <button class="btn btn-outline-dark">ここを押す</button>
       <button class="btn btn-outline-primary">ここを押す</button>
@@ -91,8 +91,8 @@
       <button class="btn btn-outline-secondary">ここを押す</button>
       <button class="btn btn-outline-light">ここを押す</button>
       <button class="btn btn btn-info">ここを押す</button>
-      <button class="btn btn btn-info btn-lg shadow">ここを押す</button>
-      <button class="btn btn-outline-danger shadow">ここを押す</button>
+      <button class="btn btn btn-danger btn-lg shadow">ここを押す</button>
+      <button class="btn btn btn-dark btn-lg shadow">ここを押す</button>
     </div>
     <div class="">
       <!-- <div class="row"> -->
