--- a/kadai_004/index_for_student.html
+++ b/kadai_004/index_for_student.html
@@ -93,6 +93,7 @@
       <button class="btn btn btn-info">ここを押す</button>
       <button class="btn btn btn-danger btn-lg shadow">ここを押す</button>
       <button class="btn btn btn-dark btn-lg shadow">ここを押す</button>
+      <button class="btn btn btn-primary btn-lg shadow">ここを押す</button>
     </div>
     <div class="">
       <!-- <div class="row"> -->
