--- a/kadai_005/index_for_student.html
+++ b/kadai_005/index_for_student.html
@@ -55,7 +55,7 @@
     <!-- <div class="container marketing"> -->
     <div class="container">
       <div class="row">
-        <div class="col-md-2 text-center col-6 text-center">
+        <div class="col-md-2 col-6 text-center">
 
           <!-- start col-lg-4 -->
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
@@ -70,7 +70,7 @@
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
 
         </div>
-        <div class="col-md-2 text-center col-6 text-center">
+        <div class="col-md-2 col-6 text-center">
           <!-- start col-lg-4 -->
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
           <h2>Heading</h2>
@@ -82,7 +82,7 @@
           </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <div class="col-md-2 text-center col-6 text-center">
+        <div class="col-md-2 col-6 text-center">
           <!-- start col-lg-4 -->
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
           <h2>Heading</h2>
@@ -94,7 +94,7 @@
           </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <div class="col-md-2 text-center col-6 text-center" >
+        <div class="col-md-2 col-6 text-center" >
           <!-- start col-lg-4 -->
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
           <h2>Heading</h2>
@@ -106,7 +106,7 @@
           </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <div class="col-md-2 text-center col-6 text-center">
+        <div class="col-md-2 col-6 text-center">
           <!-- start col-lg-4 -->
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
           <h2>Heading</h2>
@@ -118,7 +118,7 @@
           </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <div class="col-md-2 text-center col-6 text-center">
+        <div class="col-md-2 col-6 text-center">
           <!-- start col-lg-4 -->
           <img src="img/cake.jpg" class="rounded-circle" alt="サンプル画像2">
           <h2>Heading</h2>
