--- a/kadai_015/index.html
+++ b/kadai_015/index.html
@@ -389,7 +389,7 @@
     <!-- ************************************************ メニューセクション終了 -->
 
     <!-- ここから課題15 -->
-    <section class="SHEF_us_bg" id="chef">
+    <section class="CHEF_us_bg" id="chef">
       <!--コンテンツの中央揃え。上下方向にパディング（サイズ5）。下方向にマージン（サイズ5）。 -->
       <div class="container py-5 mb-5">
 
@@ -414,18 +414,7 @@
                 料理を通した社会貢献を行っている。<br>
                 得意料理はローマとカラブリア州郷土料理を中心とした真のお洒落でシンプルなイタリア料理。<br>
                 料理イベント、広告、雑誌でも活躍中。
-              </p>
-
-              <!-- 下方向にマージン（サイズ2） -->
-              <p class="mb-2">
-                料理に合うワインもイタリア産のものから国産のものまでラインナップ豊富。<br>
-              </p>
-
-              <!-- 下方向にマージン（サイズ2） -->
-              <p class="mb-2">
-                イタリアのワインの名産地「ピエモンテ州」「ヴェネト州」で生産された<br>
-                ワインを取り揃え、上品な味わいをお愉しみいただけます。<br>
-              </p>
+              </p>                    
             </div>
           </div>
 
